--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <img src="./photo_2024-07-11_14-21-07.jpg" height="100" alt="my pic">
        
        <h2>Summary</h2>
-       <p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
+       <p>I am a hardworking and dedicated individual who is currently persuing his B.Tech.</p>
         <hr>
 
        <h2>Education</h2>
